<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="@color/white"
    tools:context=".fragments.ButtonCalculatorFragment">

    <GridLayout
        android:id="@+id/button_grid_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:layout_gravity="bottom|center_horizontal">

        <Button
            android:id="@+id/clear_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button_equel"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/ac"
            android:textSize="18sp"/>

        <ImageButton
            android:id="@+id/backspace_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button_equel"
            android:src="@drawable/ic_twotone_arrow"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/percent_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button_equel"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/procent"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/division_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button_equel"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/division"
            android:textSize="20sp" />
        <Button
            android:id="@+id/seven_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/seven"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/eight_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/eight"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/nine_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/nine"
            android:textSize="20sp"/>

        <ImageButton
            android:id="@+id/multiply_btn"
            android:background="@drawable/round_button_equel"
            android:layout_height="60dp"
            android:layout_width="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_baseline_clear_24" />

        <Button
            android:id="@+id/four_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/four"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/five_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/five"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/six_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/six"
            android:textSize="20sp"/>

        <ImageButton
            android:id="@+id/minus_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button_equel"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_baseline_remove_24"/>

        <Button
            android:id="@+id/one_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/one"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/two_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/two"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/three_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/three"
            android:textSize="20sp"/>

        <ImageButton
            android:id="@+id/plus_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button_equel"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_baseline_add_24"/>

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/q"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/zero_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/zero"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/dot_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/dot"
            android:textSize="20sp"/>

        <ImageButton
            android:id="@+id/calculate_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button_equel"
            android:src="@drawable/ic_baseline_dehaze_24"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>



    </GridLayout>

</FrameLayout>